--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,10 +21,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11693563.md#1" target="_blank">【名家专栏】弹劾听证内藏共产主义颠覆模式</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11693563.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188699287-1200x848-150x120.jpg" align ="left"></a>著名的反共持不同政见者弗拉基米尔?布科夫斯基（Vladimir Bukovsky）于11月19日在伦敦公墓下葬。而在华盛顿，美国的民主制度却给自己蒙污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:21 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11693233.md#1" target="_blank">王友群：为什么中共总是骂美国？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11693233.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280906212188-150x120.jpg" align ="left"></a>11月27日，美国总统川普签署《香港人权与民主法案》。次日，10万香港人聚集爱丁堡广场，对川普表达由衷的感谢。这个法案被称为送给香港人最好的感恩节礼物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 3:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11692512.md#1" target="_blank">君辞：共产党凭什么统治中国</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11692512.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c0f6b064586129_ttl7dayyRQ_10________x_-150x120.jpg" align ="left"></a>中国共产党控制舆论、控制思想的方法之一就是混淆概念。不知不觉中，中国的人们已经习惯了认为国家就是共产党，共产党就是国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 3:10 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697518.md#1" target="_blank">祝君安：致红朝中人</a><br></h3>曾燃激情曾整风，一路斗来一路痛;
-官乏治术民走险，党欲独裁统西东;
-孽海妖凶珠有泪，刀山虎贪恨无穷;
-苟容曲从五斗苦，泣麟悲凤早弃共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:37 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11692754.md#1" target="_blank">程晓容：香港反送中的五大冲击波</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11692754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911282237382188-150x120.jpg" align ="left"></a>中共面临的，并不仅是发生在香港的政治海啸，而是它无法逃避的正义对罪恶的清算。中共失信于香港，它亦不可能控制台湾，并终将在大陆崩溃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 4:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696854.md#1" target="_blank">洪微：中共的“冷战”从未停止</a><br></h3>众所周知，“冷战”已经在28年前结束了，1991年，前东欧和苏联社会主义阵营解体，那里的人们自主选择了国家的发展体制和道路，西方世界也欢呼了胜利，战争的威胁大大解除了，世界憧憬的和平与繁荣，似乎降临了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696757.md#1" target="_blank">骆克仁：放下观念看看香港的实况转播</a><br></h3>经过寒冷阴雨的感恩节假期，估计很多人都胖了一些。这几天和朋友们聚餐的话题始终环绕着香港。感恩节前夕，川普总统签订了《香港人权与民主法案》以及《禁止向香港出口防暴装备法案》，美国送给香港市民一份大礼。
 
